fix(oui.input): replace fix of flex issue on firefox

--- a/packages/components/input/src/less/input-group.less
+++ b/packages/components/input/src/less/input-group.less
@@ -9,7 +9,7 @@
 
   .oui-input {
     min-width: 0; // Cancel min-width on firefox
-    flex: 1;
+    flex: 1 1 auto;
   }
 
   .oui-button,
